bk_ida/gccida/c2/yyerror
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/yyerror/src/c-parse.c:5298:37: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( unsigned int)v1 <= 0xFF && ( sch_istable[( unsigned __int8)v1] & 0xAC) != 0 ) 
                                    ^~~~~~~~~~~
                                    _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/yyerror/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/yyerror/src/obj/c-parse.o] Error 1
